--- a/login.html
+++ b/login.html
@@ -2,7 +2,6 @@
     <head>
         <title>Login Page for FIZZBUZZ</title>
         <link rel="stylesheet" href="style.css">
-        <script src="variable.js"></script>
         <script>
             function get(url) {
                 return new Promise((resolve, reject) => {
@@ -31,7 +30,6 @@
                         //User "myUserName" not found.
                         //response.data is null
                         post("http://basic-web.dev.avc.web.usf.edu/"+user, { score: 0 }); //create a new user.
-                        console.log("123");
                     }
                 });
                 console.log(user);
@@ -58,7 +56,7 @@
     <body>
 
         <table width="20%" bgcolor="0099CC" align="center">
-
+            //designing done according to readibility 
             <tr>
                 <td colspan=2><center><font size=4><b>Fizz Buzz Game Login</b></font></center></td>
             </tr>
