--- a/fizzbuzz.html
+++ b/fizzbuzz.html
@@ -13,7 +13,7 @@
 
 </body>
 
-<script src="variable.js"></script>
+<script src="fizzbuzz_js.js"></script>
 <button onclick="play()" id="inc">Click to Increment </button>
-
+    
 </html>
