changed variable inc to incr
The change was made to symbolize the css linking to give the coloring effect to button 'click to increment'

--- a/fizzbuzz.html
+++ b/fizzbuzz.html
@@ -14,6 +14,6 @@
 </body>
 
 <script src="fizzbuzz_js.js"></script>
-<button onclick="play()" id="inc">Click to Increment </button>
+<button onclick="play()" id="incr">Click to Increment </button>
     
 </html>
